# MFTool

./: Cargo.toml  README.md
data/: Cargo.toml
data/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
